--- a/sci-fif.html
+++ b/sci-fif.html
@@ -41,9 +41,15 @@
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Sword Art Online</h1>
     <div></div>
-    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
-    <br>
-    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <p class="infol"><strong>Anime:</strong> Yes</p>
+    <p class="infol"><strong>Status:</strong> Complete</p>
+    <p class="infol"><strong>Start:</strong> 2012</p>
+    <p class="infol"><strong>End:</strong> 2020</p>
+    <div class="secbr"></div>
+    <p class="infol"><strong>Manga:</strong> Yes</p>
+    <p class="infol"><strong>Status:</strong> Ongoing</p>
+    <p class="infol"><strong>Start:</strong> 2010</p>
+    <p class="infol"><strong>End:</strong> N/A</p>
     <br>
     <h4>Summary:</h4><p class="summary">Ever since the release of the innovative NerveGear, gamers from all around the globe have been given the opportunity to experience a completely immersive virtual reality. Sword Art Online (SAO), one of the most recent games<span id="dots1">...</span><span id="expand1"> on the console, offers a gateway into the wondrous world of Aincrad, a vivid, medieval landscape where users can do anything within the limits of imagination. With the release of this worldwide sensation, gaming has never felt more lifelike.
       However, the idyllic fantasy rapidly becomes a brutal nightmare when SAO's creator traps thousands of players inside the game. The "log-out" function has been removed, with the only method of escape involving beating all of Aincrad's one hundred increasingly difficult levels. Adding to the struggle, any in-game death becomes permanent, ending the player's life in the real world.
@@ -56,9 +62,15 @@
     <div id="myInfo2" class="infoHide2">
     <h1 class="sr">Cyberpunk: Edgerunners</h1>
     <div></div>
-    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
-    <br>
-    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <p class="infor"><strong>Anime:</strong> Yes</p>
+    <p class="infor"><strong>Status:</strong> Complete</p>
+    <p class="infor"><strong>Start:</strong> 2022</p>
+    <p class="infor"><strong>End:</strong> 2022</p>
+    <div class="secbr"></div>
+    <p class="infor"><strong>Manga:</strong> N/A</p>
+    <p class="infor"><strong>Status:</strong> N/A</p>
+    <p class="infor"><strong>Start:</strong> N/A</p>
+    <p class="infor"><strong>End:</strong> 2015</p>
     <br>
     <h4>Summary:</h4><p class="summary">Dreams are doomed to die in Night City, a futuristic Californian metropolis. As a teenager living in the city's slums, David Martinez is trying to fulfill his mother's lifelong wish for him to reach the top of Arasaka, the world's leading security corporation.<span id="dots2">...</span><span id="expand2"> To this end, he attends the prestigious Arasaka Academy while his mother works tirelessly to keep their family afloat.
       When an incident with a street gang leaves David's life in tatters, he stumbles upon Sandevistan cyberware—a prosthetic that grants its wearer superhuman speed. Fueled by rage, David implants the device in his back, using it to exact revenge on one of his tormentors. This gets him expelled from the academy, shattering his hopes of ever making his mother proud.
@@ -71,9 +83,15 @@
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">Edens Zero</h1>
     <div></div>
-    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
-    <br>
-    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <p class="infol"><strong>Anime:</strong> Yes</p>
+    <p class="infol"><strong>Status:</strong> Ongoing</p>
+    <p class="infol"><strong>Start:</strong> 2021</p>
+    <p class="infol"><strong>End:</strong> Ongoing</p>
+    <div class="secbr"></div>
+    <p class="infol"><strong>Manga:</strong> Yes</p>
+    <p class="infol"><strong>Status:</strong> Ongoing</p>
+    <p class="infol"><strong>Start:</strong> 2018</p>
+    <p class="infol"><strong>End:</strong> N/A</p>
     <br>
     <h4>Summary:</h4><p class="summary">All his life, Shiki has been surrounded by machines. At Granbell Kingdom, a long-abandoned amusement park, he is the only one of his kind around. That is, until Rebecca Bluegarden and her feline companion Happy arrive<span id="dots3">...</span><span id="expand3">, unaware that they are Granbell's first visitors in one hundred years. Their goal is to make fun videos for their B-Cube channel, but what they find instead is a friend in the socially awkward Shiki.
       When Granbell becomes too dangerous for the three of them, they set off on an adventure through the Sakura Cosmos. They hope to make more interesting videos and even find the elusive goddess Mother, while Shiki wants to make more friends, spurred on by the words of his late grandfather. Of course, the journey will not be easy, as no one has seen Mother before, but Shiki is determined to reach his goal and explore the boundless reaches of space together with his new friends.</span></p>
@@ -85,9 +103,15 @@
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">Gintama</h1>
     <div></div>
-    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
-    <br>
-    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <p class="infor"><strong>Anime:</strong> Yes</p>
+    <p class="infor"><strong>Status:</strong> Complete</p>
+    <p class="infor"><strong>Start:</strong> 2006</p>
+    <p class="infor"><strong>End:</strong> 2018</p>
+    <div class="secbr"></div>
+    <p class="infor"><strong>Manga:</strong> Yes</p>
+    <p class="infor"><strong>Status:</strong> Complete</p>
+    <p class="infor"><strong>Start:</strong> 2003</p>
+    <p class="infor"><strong>End:</strong> 2019</p>
     <br>
     <h4>Summary:</h4><p class="summary">Edo is a city that was home to the vigor and ambition of samurai across the country. However, following feudal Japan's surrender to powerful aliens known as the "Amanto," those aspirations now seem unachievable. With the once-influential shogunate rebuilt<span id="dots4">...</span><span id="expand4"> as a puppet government, a new law is passed that promptly prohibits all swords in public.
       Enter Gintoki Sakata, an eccentric silver-haired man who always carries around a wooden sword and maintains his stature as a samurai despite the ban. As the founder of Yorozuya, a small business for odd jobs, Gintoki often embarks on endeavors to help other people—though usually in rather strange and unforeseen ways.
