--- a/sports.html
+++ b/sports.html
@@ -41,9 +41,15 @@
     <div id="myInfo1" class="infoHide1">
     <h1 class="sr">Hajime No Ippo</h1>
     <div></div>
-    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
-    <br>
-    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <p class="infol"><strong>Anime:</strong> Yes</p>
+    <p class="infol"><strong>Status:</strong> Complete</p>
+    <p class="infol"><strong>Start:</strong> 2000</p>
+    <p class="infol"><strong>End:</strong> 2014</p>
+    <div class="secbr"></div>
+    <p class="infol"><strong>Manga:</strong> Yes</p>
+    <p class="infol"><strong>Status:</strong> Ongoing</p>
+    <p class="infol"><strong>Start:</strong> 1989</p>
+    <p class="infol"><strong>End:</strong> N/A</p>
     <br>
     <h4>Summary:</h4><p class="summary">In his father's absence, teenager Ippo Makunouchi works hard to help his mother run her fishing boat rental business. Ippo's timid nature, his lack of sleep, and the sea smell make him an easy target for relentless bullies who leave him bruised and beaten on<span id="dots1">...</span><span id="expand1"> a daily basis. Mamoru Takamura, an up-and-coming boxer, rescues Ippo from a violent after-school incident and takes him back to the Kamogawa Boxing Gym for recovery. Takamura and his fellow boxers, Masaru Aoki and Tatsuya Kimura, are stunned by Ippo's powerful punches—a result of strong muscles developed through years serving his physically taxing family business.
       Following brief training under Takamura, Ippo impresses the other boxers in a practice match against prodigy Ichirou Miyata. He gains a rival in Miyata and a coach in Genji Kamogawa, the gym owner and a former boxer himself. As Ippo takes the first steps in his official boxing career, he faces off against a series of challenging opponents, each more powerful than the last. Victory, loss, and a cycle of dedicated training await Ippo on his journey to achieve greatness. With his tough body and unstoppable fighting spirit, the kind young man seeks to take on the world.</span></p>
@@ -55,9 +61,15 @@
     <div id="myInfo2" class="infoHide2">
     <h1 class="sr">Eyeshield 21</h1>
     <div></div>
-    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
-    <br>
-    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <p class="infor"><strong>Anime:</strong> Yes</p>
+    <p class="infor"><strong>Status:</strong> Complete</p>
+    <p class="infor"><strong>Start:</strong> 2005</p>
+    <p class="infor"><strong>End:</strong> 2008</p>
+    <div class="secbr"></div>
+    <p class="infor"><strong>Manga:</strong> Yes</p>
+    <p class="infor"><strong>Status:</strong> Complete</p>
+    <p class="infor"><strong>Start:</strong> 2002</p>
+    <p class="infor"><strong>End:</strong> 2009</p>
     <br>
     <h4>Summary:</h4><p class="summary">Shy, reserved, and small-statured, Deimon High School student Sena Kobayakawa is the perfect target for bullies. However, as a result of running errands throughout his life, Sena has become agile and developed a skill for avoiding crowds of people.<span id="dots2">...</span><span id="expand2"> After the cunning Youichi Hiruma—captain of the Deimon Devil Bats football team—witnesses Sena's rapid legs in motion, he coerces the timid boy into joining his squad.
       As Hiruma wants to conceal Sena's identity from other clubs, Sena is forced to hide under the visored helmet of "Eyeshield 21," a mysterious running back wearing the number 21 jersey. The legendary Eyeshield 21 can supposedly run at the speed of light and has achieved remarkable feats in the United States during his time at the Notre Dame College.
@@ -70,9 +82,15 @@
     <div id="myInfo3" class="infoHide3">
     <h1 class="sr">Blue Lock</h1>
     <div></div>
-    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
-    <br>
-    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <p class="infol"><strong>Anime:</strong> Yes</p>
+    <p class="infol"><strong>Status:</strong> Complete</p>
+    <p class="infol"><strong>Start:</strong> 2022</p>
+    <p class="infol"><strong>End:</strong> 2023</p>
+    <div class="secbr"></div>
+    <p class="infol"><strong>Manga:</strong> Yes</p>
+    <p class="infol"><strong>Status:</strong> Ongoing</p>
+    <p class="infol"><strong>Start:</strong> 2018</p>
+    <p class="infol"><strong>End:</strong> N/A</p>
     <br>
     <h4>Summary:</h4><p class="summary">Yoichi Isagi was mere moments away from scoring a goal that would have sent his high school soccer team to the nationals, but a split-second decision to pass the ball to his teammate cost him that reality. Bitter, confused, and disappointed, Isagi wonders<span id="dots3">...</span><span id="expand3"> if the outcome would have been different had he not made the pass. When the young striker returns home, an invitation from the Japan Football Union awaits him. Through an arbitrary and biased decision-making process, Isagi is one of three hundred U-18 strikers selected for a controversial project named Blue Lock.
       The project's ultimate goal is to turn one of the selected players into the star striker for the Japanese national team. To find the best participant, each diamond in the rough must compete against others through a series of solo and team competitions to rise to the top. Putting aside his ethical objections to the project, Isagi feels compelled to fight his way to the top, even if it means ruthlessly crushing the dreams of 299 aspiring young strikers.</span></p>
@@ -84,9 +102,15 @@
     <div id="myInfo4" class="infoHide4">
     <h1 class="sr">Kuroko's Basketball</h1>
     <div></div>
-    <h4 class="sri">Anime:</h4><p class="sria">Yes</p>
-    <br>
-    <h4 class="sri">Manga:</h4><p class="sria">Yes</p>
+    <p class="infor"><strong>Anime:</strong> Yes</p>
+    <p class="infor"><strong>Status:</strong> Complete</p>
+    <p class="infor"><strong>Start:</strong> 2012</p>
+    <p class="infor"><strong>End:</strong> 2015</p>
+    <div class="secbr"></div>
+    <p class="infor"><strong>Manga:</strong> Yes</p>
+    <p class="infor"><strong>Status:</strong> Complete</p>
+    <p class="infor"><strong>Start:</strong> 2008</p>
+    <p class="infor"><strong>End:</strong> 2014</p>
     <br>
     <h4>Summary:</h4><p class="summary">For the last three years, Teikou Middle School has dominated the national basketball scene with its legendary lineup: the "Generation of Miracles." It consisted of five prodigies who excelled at the sport, but a "Phantom Sixth Man" lurked in the shadows and helped earn<span id="dots4">...</span><span id="expand4"> the team their revered status. Eventually, their monstrous growth jaded them from the sport they loved and made them go their separate ways in high school.
       In search of new members, the Seirin High School basketball team recruits Taiga Kagami and Tetsuya Kuroko, two freshmen who seem to have significant differences in abilities. Having returned recently from America, Kagami has both a natural aptitude and relentless love for the sport. Meanwhile, Kuroko lacks presence and exhibits no outstanding athletic talent. However, it is later revealed that he is Teikou's Phantom Sixth Man—the player once part of the Generation of Miracles.
