Homepage content complete About Us content complete May add more content to Contact Us Added Javascript back to top function Added videos Changed footer element, scrolling lessened

--- a/about-us.html
+++ b/about-us.html
@@ -34,14 +34,33 @@
   <div></div>
    <main>
     <h1 class="pageheading">This is About Us!</h1>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-    <p>TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! TEXT HERE! </p>
-
-  </main>
+    <strong>Welcome to Peak Reckz!</strong>
+    <p>At Peak Reckz, we are dedicated to bringing the vibrant and captivating world of manga and anime to enthusiasts of all levels. Our mission is to create a welcoming space where fans can explore, learn, and connect over their shared love for these incredible art forms. </p>
+    <div class="secbr"></div>
+    <strong>Our Story</strong>
+    <p>Founded in 2024, Peak Reckz was born from a deep passion for manga and anime. Our team, comprised of lifelong fans and industry experts, understands the magic that these stories hold and the cultural impact they have worldwide. What started as a small community has now grown into a thriving platform that serves fans from all walks of life.</p>
+    <div class="secbr"></div>
+    <strong>What We Offer</strong>
+    <li><strong>Comprehensive Recommendations:</strong> Our team provides curated recommendations to guide you through the vast world of manga and anime. Whether you’re a newbie or a seasoned fan, we have something for everyone. Said recommendations can also come with reviews.</li>
+    <li><strong>Informative Guides and Tutorials:</strong> From beginners’ guides to advanced tutorials, we offer resources to help you dive deeper into manga and anime. Learn about different genres, get tips on starting your collection.</li>
+    <li><strong>Community Engagement:</strong> As our team grows, we are looking to spotlight future fan artists, writers, and cosplayers who contribute to the vibrant manga and anime community. Our goal is to celebrate the creativity and dedication of fans around the world.</li>
+    <div class="secbr"></div>
+    <strong>Our Mission</strong>
+    <li>Our mission is to foster a global community where manga and anime fans can connect, share, and grow together. We believe in the power of these stories to bring joy, inspiration, and understanding across cultures. By providing valuable content and creating a supportive environment, we aim to enhance your experience and appreciation of manga and anime.</li>
+    <div class="secbr"></div>
+    <strong>Join Our Community</strong>
+    <li>We would love to invite you to join our community and be a part of something special. Whether you’re here to discover new series, deepen your knowledge, or share your own experiences, Peak Reckz would be honoured to be your go-to resource for all things manga and anime.</li>
+    <div class="secbr"></div>
+    <strong>Thank You for Being Here</strong>
+    <li>Thank you for visiting Peak Reckz. Together, let’s continue to explore and celebrate the incredible world of manga and anime.</li>
+    <div class="secbr"></div>
+    <strong>The Peak Reckz Team</strong>
+    <div class="secbr"></div>
+    <strong>Ready to Dive in?</strong>
+    <p style="text-align: center;">Have a look at our <a href="oreckz.html"><strong>personal reccomendations</strong></a></p>
+    <div class="secbr"></div>
+    <button onclick="scrtopFunction()" id="BTTBtn" title="Go to top">Back To Top</button>
+   </main>
     <footer>
     <nav class="extPLinks">
     <ul>
