--- a/home.html
+++ b/home.html
@@ -33,22 +33,38 @@
 
   <div></div>
    <main>
-    <h1 class="pageheading">Welcome to the beginning!</h1>
-    <div></div>
-    <wbr>
+    <h1 class="pageheading">Welcome to Peak Reckz!</h1>
+    <div class="secbr"></div>
+    <strong>Your Gateway to the World of Manga and Anime</strong>
+    <p>At Peak Reckz, we're passionate about manga and anime and are committed to bringing you the best content, resources, and community connections. Whether you're a longtime fan or just starting, our platform has everything you need to dive deeper into these fascinating art forms.</p>
+    <div class="secbr"></div>
+    <strong>What is Anime?</strong>
+    <p>Anime is like a supercharged cartoon from Japan that combines stunning visuals, epic storytelling, and a dash of quirky magic. Imagine epic battles, heartwarming friendships, and fantastical worlds, all rolled into one awesome adventure. Whether it's a high school romance, a mind-bending sci-fi journey, or a heroic quest, anime takes you on a wild ride with style!</p>
+    <div class="secbr"></div>
+    <strong>What is Manga?</strong>
+    <p>Manga is like a comic book from Japan, but with extra flair! It's a visual storytelling medium where epic tales, quirky characters, and jaw-dropping art come together in black-and-white panels. Think of it as a page-turning adventure where you get to dive into worlds of fantasy, romance, and action—all from the comfort of your couch!</p>
+    <div class="secbr"></div>
+    <strong>Explore the World of Anime!</strong>
+    <p style="text-align: center;">Discover what makes the world of Manga and Anime special. Check out these videos below to get a glimpse of what the community delves in.</p>
+    <div class="secbr"></div>
     <section>
-    <article class="a1">
-    <h3 class="mangaHeading">Manga</h3>
-    <hr>
-    <p class="mangaText">Manga are Japanese comic books and graphic novels that offer a unique blend of storytelling and art. With roots tracing back to the late 19th century, manga has evolved into a vast and diverse medium. Whether you’re into action, romance, fantasy, or slice-of-life stories, there’s a manga out there for you. Manga is typically serialized in magazines before being compiled into volumes called tankōbon. It’s categorized into different demographics like shonen (for young boys), shojo (for young girls), seinen (for adult men), and josei (for adult women), ensuring there’s something for everyone.</p>
+    <article>
+    <strong>Anime</strong>
+    <div class="secbr"></div>
+    <iframe width="420" height="315" src="https://www.youtube.com/embed/ERm-bonZK3I?si=Gbn1WjnzbFSGWCXt&mute=1" allowfullscreen>
+    </iframe>
     </article>
-    <!-- "<br>" breaks up the article. Not needed as I'm using the css margin-(direction) function.-->
-    <article class="a2">
-    <h3 class="animeHeading">Anime</h3>
-    <hr>
-    <p class="animeText">Anime is the term for Japanese animated TV shows, movies, and web series. Known for its vibrant art, compelling characters, and imaginative plots, anime offers something for all tastes. Like manga, anime covers a wide range of genres, from epic adventures and heartwarming romances to intense thrillers and thought-provoking science fiction. Some anime are adaptations of manga, while others are based on light novels, video games, or original ideas. The world of anime started gaining popularity in the 1960s with series like "Astro Boy" and has since grown into a global phenomenon.</p>
+    <article>
+    <strong>Manga</strong>
+    <div class="secbr"></div>
+    <iframe width="420" height="315"
+    src="https://www.youtube.com/embed/sh1kS2reJOk?si=lMSA9xM70b2MbBah&mute=1" allowfullscreen>
+    </iframe>
     </article>
     </section>
+    <strong>Ready to Dive in?</strong>
+    <p>Grab some popcorn, find a comfy spot, and start exploring the wonderful world of anime. Whether you're laughing along with One Punch Man, feeling the feels with Your Lie in April, or going on a wild adventure with Naruto, you're in for a treat!</p>
+    <p style="text-align: center;">Have a look at our <a href="oreckz.html"><strong>personal reccomendations</strong></a></p>
   </main>
     <footer>
     <nav class="extPLinks">
